# backend/api/gateway/openapi.yml
@@ -1638,8 +1638,6 @@ components:
           format: uuid
         docker_name:
           type: string
-        driver:
-          type: string
         status:
           type: string
         last_error:
@@ -1659,8 +1657,6 @@ components:
         id:
           type: string
           format: uuid
-        driver:
-          type: string
         status:
           type: string
         last_error:
